@@ -20,13 +20,6 @@ function rcmail_toggle_display(id)
   return false;
   }
 
-function rcmail_auto_save()
-  {
-  rcmail.command('savedraft','',this);
-  self.setTimeout('rcmail_auto_save()',300000);
-  }
-self.setTimeout('rcmail_auto_save()',300000);
- 
 //-->
 </script>
 </head>
